--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -1,7 +1,9 @@
 ---
-title: Mental models for designers PART 2
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+title: Starlink pode cortar internet de usuário que piratear filme
+description: "Pirataria é crime e os satélites Starlink, da SpaceX, sabem disso. Um usuário do Reddit fez o teste e tentou realizar um download ilegal para ver o que aconteceria. Ele logo recebeu uma mensagem alertando para o corte do serviço de internet se insistisse em baixar conteúdo pirata.
+
+Sob o nome de “substrate-97”, o usuário Sam publicou uma captura de tela da mensagem que recebeu. “Estive baixando via Torrent sem usar uma VPN para ver o que aconteceria e finalmente recebi um aviso”, escreveu."
 date: Sep 14 2021
 ---
 
-This is an example post. There's another one [here](/posts/example-post).
+This is an example post. There's another one [Torrent](https://baixartorrentgratis.co/).
